@@ -1,6 +1,8 @@
 2002-07-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* tests/cmdMZ.test: Renamed constraint for clarity. [Bug#583427]
+	Added tests for the [time] command, which was previously only
+	indirectly tested!
 
 2002-07-18  Vince Darley  <vincentdarley@users.sourceforge.net>
 
